--- a/pirate.html
+++ b/pirate.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Apps Lab 07</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 
-    <style>
+<style>
         body
         {
             background-color: #e9e1e1;
@@ -21,7 +29,7 @@
 
         #locations,
         #penalty,
-        #help 
+        #help   
         {
             font-size: 15px;
             font-weight: bold;
@@ -33,6 +41,22 @@
             background-color: rgb(170, 180, 183);
             color: rgb(6, 15, 17);
         }
+       
+
+        div {
+            padding:1px;
+            border:1px;
+            margin:1px;
+            border-radius: 1px;
+
+
+        }
+        .treasure {
+            margin-top: 15px;
+
+        }
+
+
     </style>
   </head>
 
@@ -43,5 +67,126 @@
     <p id="penalty">Penalty is zero</p>
     <p>Click for help</p>
     <p id="help">Help report</p> 
+
+    <div class="container">
+        <div class="image-row d-flex justify-content-center">
+            <div><img src="location.jpg" height="100px" width="100px"></div>
+            <div><img src="location.jpg" height="100px" width="100px"></div>
+            <div><img src="location.jpg" height="100px" width="100px"></div>
+            <div><img src="location.jpg" height="100px" width="100px"></div>
+            <div><img src="location.jpg" height="100px" width="100px"></div>
+        </div>
+        <div class="image-row d-flex justify-content-center">
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+        </div>
+        <div class="image-row d-flex justify-content-center">
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+        </div>
+        <div class="image-row d-flex justify-content-center">
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+         </div>
+        <div class="image-row d-flex justify-content-center">
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+            <div ><img src="location.jpg" height="100px" width="100px"></div>
+        </div>
+    </div>
+    <script>
+        var ids = ["id0","id1","id2","id3","id4",
+                   "id5","id6","id7","id8","id9",
+                   "id10","id11","id12","id13","id14",
+                   "id15","id16","id17","id18","id19",
+                   "id20","id21","id22","id23","id24"];
+        var checkCount = 0;
+        var penalty = 0;
+        var lastCheck = 0;
+        var treasureLocation = 5;
+        var trapLocation = 18;
+        var gameOver = false;
+
+        function check(position) {
+      if (gameOver) return;
+
+      const id = ids[position];
+      const imageElement = document.getElementById(id);
+
+      let imageSrc = "";
+      if (position === treasureLocation) {
+          imageSrc = "image1.jpg";
+          gameOver = true;
+          penalty -= 3;
+          checkCount++;
+      } else if (position === trapLocation) {
+          imageSrc = "image3.jpg";
+          gameOver = true;
+          penalty += 4;
+          checkCount++;
+      } else {
+          imageSrc = "image4.jpg";
+          checkCount++;
+          penalty++;
+      }
+
+      imageElement.setAttribute("src", imageSrc);
+      document.getElementById("locations").textContent = "Number of locations checked is : " + checkCount;
+      document.getElementById("penalty").textContent = "Penalty is : " + penalty;
+      lastCheck = position; 
+  }
+
+  function help() {
+      const rowColTreasure = { row: Math.floor(treasureLocation / 5), col: treasureLocation % 5 };
+      const rowColLast = { row: Math.floor(lastCheck / 5), col: lastCheck % 5 };
+
+      const rowDiff = Math.abs(rowColTreasure.row - rowColLast.row);
+      const colDiff = Math.abs(rowColTreasure.col - rowColLast.col);
+
+      if (rowDiff + colDiff === 1) {
+          return "Can smell it";
+      } else if (rowDiff + colDiff === 2) {
+          return "Close Matie";
+      } else {
+          return "Step Faster";
+      }
+  }
+
+  function showHelp() {
+      document.getElementById("help").textContent = help();
+  }
+
+  function newGame(){
+      checkCount = 0;
+      penalty = 0;
+      lastCheck = 0;
+      gameOver = false;
+
+      treasureLocation = Math.floor(Math.random() * 25);
+      do {
+          trapLocation = Math.floor(Math.random() * 25);
+      } while (trapLocation === treasureLocation);
+    }
+      document.getElementById("locations").innerHTML = "Number of locations checked is : " + checkCount;
+      document.getElementById("penalty").innerHTML = "Penalty is : " + penalty;
+      document.getElementById("help").innerHTML = "Help report";
+
+  for (var i = 0; i < 25; i++) {
+          document.getElementById(ids[i]).src = "location.jpg"
+      }
+
+</script>
+         
   </body>
 </html>
