--- a/merger.html
+++ b/merger.html
@@ -2,7 +2,7 @@
 <html> <head> <style>
     .flex-container {
       display: flex;  flex-direction:row;
-      background-color: red;
+      background-color: rgb(195, 255, 0);
   }
 
 .flex-container > div {  /*div children of the flex container*/
@@ -19,10 +19,15 @@
 	}
 </style></head>
 <h3>Akhila Gonegari builds a merger</h3>
+<br>
+<div class="mb-3">
+    <label for="text">Enter Text : </label>
+    <input type="text" id="text" name="text" placeholder="Enter text to be in new div" autofocus>
+</div>
 
-<input text="text" id="input text">
 <br>
 <div class="flex-container" id="target">
+    <div class="merger">webApps</div>
     <div class="merger">row item 1</div>
     <div class="merger">row item 2</div>
     <div class="merger">row item 3</div>
